--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,18 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.bm.photoview:library:1.4.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+
     // testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     // debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     // releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.8@aar'
     //友盟统计
     compile 'com.umeng.analytics:analytics:latest.integration'
+    //测得报错的处理
+    testCompile 'junit:junit:4.12'
+    testCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
+    androidTestCompile 'com.android.support.test:runner:0.2'
+    androidTestCompile 'com.android.support.test:rules:0.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
