--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    // dataBinding 加入
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
