--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
+    //fastgson的转换
+    //compile 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.apkfuns.logutils:library:1.4.2.2'
@@ -43,7 +45,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.5'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     compile 'com.android.support:design:26.1.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
