--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".application.GApp"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -16,7 +17,6 @@
         </activity>
        <!-- 主界面-->
         <activity android:name=".activity.MainActivity"/>
-        <!--引导页-->
         <activity android:name=".activity.GuideActivity"/>
     </application>
 
