--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,23 @@
     package="com.guoyie.www.delivery.easy">
 
     <application
+        android:name=".application.GApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".application.GApp"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.LoadingActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       <!-- 主界面-->
-        <activity android:name=".activity.MainActivity"/>
-        <activity android:name=".activity.GuideActivity"/>
+        <!-- 主界面 -->
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.GuideActivity" />
+        <activity android:name=".activity.LoginActivity"></activity>
     </application>
 
 </manifest>
