--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
 
     compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
@@ -31,13 +32,13 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.1.0'
     //fastgson的转换
     compile 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
-    // compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.apkfuns.logutils:library:1.4.2'
@@ -63,6 +64,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':library')
     compile 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.facebook.fresco:fresco:1.5.0'
+
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+
 
 
 }
