--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,8 @@
         <activity android:name=".activity.InfoOrderActivity"/>
         <activity android:name=".activity.TransTormorderActivity"/>
         <activity android:name=".activity.OuterOrderActivity"/>
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.RegisterActivity"></activity>
+        <activity android:name=".activity.RegisterActivity"/>
+        <activity android:name=".activity.InterDetailActivity"/>
     </application>
 
 </manifest>
