--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,17 +35,18 @@
         <!-- 主界面 -->
         <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.GuideActivity" />
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.InterOrderActivity" />
-        <activity android:name=".activity.InfoOrderActivity" />
-        <activity android:name=".activity.TransTormorderActivity" />
-        <activity android:name=".activity.OuterOrderActivity" />
-        <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.InterDetailActivity" />
-        <activity android:name=".activity.EditOrderActivity" />
-        <activity android:name=".activity.EditOrderDetailActivity" />
-        <activity android:name=".activity.UserBasicInfoActivity" />
-        <activity android:name=".activity.StoreDetailActivity"></activity>
+        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.InterOrderActivity"/>
+        <activity android:name=".activity.InfoOrderActivity"/>
+        <activity android:name=".activity.TransTormorderActivity"/>
+        <activity android:name=".activity.OuterOrderActivity"/>
+        <activity android:name=".activity.RegisterActivity"/>
+        <activity android:name=".activity.InterDetailActivity"/>
+        <activity android:name=".activity.EditOrderActivity"
+                  android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".activity.EditOrderDetailActivity"
+                  android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".activity.UserBasicInfoActivity"></activity>
     </application>
 
 </manifest>
