--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
         <activity android:name=".activity.SeachRusltActivity" />
         <activity android:name=".activity.StoreManagerActivity"/>
         <activity android:name=".activity.StoreCapacityManagerActivity"/>
+        <activity android:name=".activity.InfoOrderDetailActivity"/>
+        <activity android:name=".activity.TransTormDetailActivity"/>
     </application>
 
 </manifest>
