--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
-   // compile 'io.reactivex:rxjava:1.1.6'
-  //  compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.6'
+   compile 'io.reactivex:rxandroid:1.1.0'
     //fastgson的转换
     compile 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
