--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,8 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.5'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+   // compile 'io.reactivex.rxjava2:rxjava:2.0.5'
+    //compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.android.support:design:26.1.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
