--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
+        android:configChanges="orientation|keyboardHidden|screenSize"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.LoadingActivity">
             <intent-filter>
