--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,9 @@ ANDROID_BUILD_TOOLS_VERSION=26.0.3
 
 VERSION_NAME=2.1.9
 VERSION_CODE=219
+
+android.useDeprecatedNdk=true
+RELEASE_KEY_PASSWORD=774169396
+RELEASE_KEY_ALIAS=delivery
+RELEASE_STORE_PASSWORD=774169396
+RELEASE_STORE_FILE=./delivery.jks
