--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,10 @@
-/build
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.ideabraries
+.DS_Store
+ild
+/captures
+.externalNativeBuild
+.jks
