--- a/app/.gitignore
+++ b/app/.gitignore
@@ -2,9 +2,9 @@
 .gradle
 /local.properties
 /.idea/workspace.xml
-/.ideabraries
+/.idea/libraries
 .DS_Store
-ild
+/build
 /captures
 .externalNativeBuild
 .jks
