--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,10 +1,12 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.gradle/
 .DS_Store
-/build
-/captures
-.externalNativeBuild
+local.properties
+# build files
+build/
+bin/
+gen/
+output/
+# android studio
+*.iml
+.idea
 .jks
