--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
     dataBinding {
         enabled = true
     }
+
 }
 
 dependencies {
@@ -51,6 +52,8 @@ dependencies {
     //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+//    implementation 'com.github.bumptech.glide:glide:4.6.1'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'io.reactivex:rxandroid:1.1.0'
     //fastgson的转换
