app更新模块编写及储罐性质筛选修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,16 @@
             android:value="5a531491b27b0a6c2d0000bd" />
 
         <activity android:name=".activity.CapacityDetailActivity"></activity>
+        <!--文件提供者，版本更新时使用-->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.guoyie.www.delivery.easy.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
     </application>
 
 </manifest>
